<resources>
    <string name="app_name">Octopus</string>
    <string name="location">Location</string>
    <string name="login">Login</string>
    <string name="choose_your_location">Choose your location</string>
    <string name="your_current_gps_location">Your current GPS location</string>
    <string name="different_city_location">Different city location</string>
    <string name="belgrade">Belgrade</string>
    <string name="nis">Nis</string>
    <string name="novi_sad">Novi Sad</string>
    <string name="kragujevac">Kragujevac</string>
    <string name="kosovska_mitrovica">Kosovska Mitrovica</string>
    <string name="swipe_next">Swipe next</string>
    <string name="login_register">Login/Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="no_account_register_now">No account? Register now!</string>
    <string name="contact_us">Contact us</string>
    <string name="language">Language</string>
    <string name="octopus_icon">OctopusIcon</string>
    <string name="serbian">Serbian</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="swipe_back">Swipe back</string>
    <string name="categories">Categories</string>
    <string name="taxi_agencies">Taxi agencies</string>
    <string name="hotels_and_motels">Hotels and motels</string>
    <string name="food_and_restaurants">Food and Restaurants</string>
    <string name="search">Search</string>
    <string name="firm_name">Firm name</string>
    <string name="rank">Rank</string>
    <string name="description">Description</string>
    <string name="work_time">Work time</string>
    <string name="by_distance_ascending">Distance ascending</string>
    <string name="by_distance_descending">Distance descending</string>
    <string name="avg_price_ascending">Avg. price ascending</string>
    <string name="avg_price_descending">Avg. price descending</string>
    <string name="enter_name">Enter name...</string>
    <string name="no_result_match_input_arguments">No result match input arguments!</string>
    <string name="no_products_to_be_displayed">No products to be displayed!</string>
    <string name="firm_icon">FIRM_ICON</string>
    <string name="product_icon">PRODUCT_ICON</string>
    <string name="add_amount_icon">ADD_AMOUNT_ICON</string>
    <string name="_1">1</string>
    <string name="minus_amount_icon">MINUS_AMOUNT_ICON</string>
    <string name="add_to_your_cart">Add to your cart</string>
    <string name="product_name">Product name</string>
    <string name="side_nav_bar_icon">SIDE_NAV_BAR_ICON</string>
    <string name="shopping_cart_icon">SHOPPING_CART_ICON</string>
    <string name="octopus">Octopus</string>
    <string name="footer_search_icon">FOOTER_SEARCH_ICON</string>
    <string name="item_view_icon">ITEM_VIEW_ICON</string>
    <string name="sorting_type">Sorting type</string>
    <string name="call">Call</string>
    <string name="back">Back</string>
    <string name="amount">Amount</string>
    <string name="star_icon">STAR_ICON</string>
    <string name="time_icon">TIME_ICON</string>
</resources>
