<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main_search_relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainPanelActivity"
    android:background="@drawable/background_main_image">

    <LinearLayout
        android:id="@+id/side_nav_bar_main_panel_view"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_main_image"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:layout_alignParentLeft="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/contact_us_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/contact_us"
            android:textColor="#06FF12"
            android:textSize="32sp"
            app:fontFamily="@font/dancing_script" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/contact_us_icon"
            android:drawableLeft="@drawable/contact_us_icon"
            android:drawablePadding="5dp"
            app:fontFamily="@font/dancing_script"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:text="@string/call" />

        <TextView
            android:id="@+id/change_language_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="#06FF12"
            android:textSize="32sp"
            app:fontFamily="@font/dancing_script"
            android:paddingTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/language_icon"
            android:drawableLeft="@drawable/language_icon"
            android:drawablePadding="15dp"
            android:text="@string/serbian"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            app:fontFamily="@font/dancing_script"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/language_icon"
            android:drawableLeft="@drawable/language_icon"
            android:drawablePadding="15dp"
            android:text="@string/english"
            android:textSize="22sp"
            android:textAllCaps="false"
            app:fontFamily="@font/dancing_script"/>

        <Button
            android:id="@+id/previous_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:gravity="center"
            android:drawableLeft="@drawable/swipe_back_arrow_icon"
            android:drawableStart="@drawable/swipe_back_arrow_icon"
            android:drawablePadding="15dp"
            android:background="@android:color/transparent"
            style="@style/HugeText.Button"
            app:fontFamily="@font/dancing_script"
            android:paddingTop="35dp"
            android:text="@string/back"
            android:onClick="OnClickDismissSideBar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_main_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/side_nav_bar_main_panel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickHeaderButton"
            android:background="@android:color/transparent"
            android:src="@drawable/side_nav_bar_icon"
            android:contentDescription="@string/side_nav_bar_icon" />

        <TextView
            android:id="@+id/octopus_header_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/octopus"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="#06FF12"
            app:fontFamily="@font/dancing_script" />

        <ImageButton
            android:id="@+id/cart_button_main_panel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickHeaderButton"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_shopping_cart_black_24dp"
            android:contentDescription="@string/shopping_cart_icon" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <TextView
            android:id="@+id/categories_text_view"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="32sp"
            android:textColor="#06FF12"
            app:fontFamily="@font/dancing_script" />

        <LinearLayout
            android:id="@+id/categories_linear_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/taxi_agency"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/taxi_agencies"
                android:textSize="26sp"
                android:fontFamily="@font/dancing_script"
                android:padding="5dp" />

            <CheckBox
                android:id="@+id/hotels_motels"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/hotels_and_motels"
                android:textSize="26sp"
                android:fontFamily="@font/dancing_script"
                android:padding="5dp" />

            <CheckBox
                android:id="@+id/food_restaurants"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/food_and_restaurants"
                android:textSize="26sp"
                android:fontFamily="@font/dancing_script"
                android:padding="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/sort_type_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sorting_type"
            android:textSize="32sp"
            android:textColor="#06FF12"
            app:fontFamily="@font/dancing_script" />

        <LinearLayout
            android:id="@+id/sort_linear_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center">

            <RadioGroup
                android:id="@+id/distance_radio_group"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/taxi_agencies"
                android:textSize="26sp"
                android:fontFamily="@font/dancing_script"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/sort_by_distance_asc"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/by_distance_ascending"
                    android:textSize="26sp"
                    android:fontFamily="@font/dancing_script"
                    android:padding="5dp" />

                <RadioButton
                    android:id="@+id/sort_by_distance_desc"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/by_distance_descending"
                    android:textSize="26sp"
                    android:fontFamily="@font/dancing_script"
                    android:padding="5dp" />
            </RadioGroup>

            <View
                android:layout_width="225dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <RadioGroup
                android:id="@+id/price_radio_group"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/taxi_agencies"
                android:textSize="26sp"
                android:fontFamily="@font/dancing_script"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/sort_by_price_asc"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_price_ascending"
                    android:textSize="26sp"
                    android:fontFamily="@font/dancing_script"
                    android:padding="5dp" />

                <RadioButton
                    android:id="@+id/sort_by_price_desc"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_price_descending"
                    android:textSize="26sp"
                    android:fontFamily="@font/dancing_script"
                    android:padding="5dp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/search_main_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/search_icon"
            android:onClick="OnClickSearchButton"
            android:background="@android:color/transparent"
            android:textSize="26sp"
            app:fontFamily="@font/dancing_script"
            android:textColor="#06FF12"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/search_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/search_button_main_panel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickButtonFromFooter"
            android:background="@android:color/transparent"
            android:src="@drawable/search_icon_black"
            android:contentDescription="@string/footer_search_icon" />

        <ImageButton
            android:id="@+id/view_button_main_panel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickButtonFromFooter"
            android:background="@android:color/transparent"
            android:textSize="26sp"
            app:fontFamily="@font/dancing_script"
            android:textColor="#06FF12"
            android:drawablePadding="15dp"
            android:src="@drawable/display_result_icon"
            android:contentDescription="@string/item_view_icon"
            android:alpha="0.5"/>
    </LinearLayout>

</RelativeLayout>
