<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.BuyProductActivity"
    android:background="@drawable/background_main_image">

    <LinearLayout
        android:id="@+id/side_nav_bar_main_panel_view"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_main_image"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:layout_alignParentLeft="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/contact_us_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/contact_us"
            android:textColor="#06FF12"
            android:textSize="32sp"
            app:fontFamily="@font/dancing_script" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/contact_us_icon"
            android:drawableLeft="@drawable/contact_us_icon"
            android:drawablePadding="5dp"
            app:fontFamily="@font/dancing_script"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:text="@string/call" />

        <TextView
            android:id="@+id/change_language_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="#06FF12"
            android:textSize="32sp"
            app:fontFamily="@font/dancing_script"
            android:paddingTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/language_icon"
            android:drawableLeft="@drawable/language_icon"
            android:drawablePadding="15dp"
            android:text="@string/serbian"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            app:fontFamily="@font/dancing_script"/>

        <Button
            android:id="@+id/previous_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:gravity="center"
            android:drawableLeft="@drawable/swipe_back_arrow_icon"
            android:drawableStart="@drawable/swipe_back_arrow_icon"
            android:drawablePadding="15dp"
            android:background="@android:color/transparent"
            style="@style/HugeText.Button"
            app:fontFamily="@font/dancing_script"
            android:paddingTop="35dp"
            android:text="@string/back"
            android:onClick="OnClickDismissSideBar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_product_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/side_nav_bar_product_panel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickHeaderButton"
            android:background="@android:color/transparent"
            android:src="@drawable/side_nav_bar_icon"
            android:contentDescription="@string/side_nav_bar_icon" />

        <TextView
            android:id="@+id/octopus_header_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/octopus"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="#06FF12"
            app:fontFamily="@font/dancing_script" />

        <ImageButton
            android:id="@+id/cart_product_panel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickHeaderButton"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_shopping_cart_black_24dp"
            android:contentDescription="@string/shopping_cart_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/service_id_text_view_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/product_icon_main"
        android:layout_below="@id/header_product_panel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/product_icon" />

    <TextView
        android:id="@+id/product_name_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_icon_main"
        android:text="@string/product_name"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textColor="#06FF12"
        app:fontFamily="@font/dancing_script"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/product_price_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description_main"
        android:text="@string/rank"
        android:textColor="@android:color/white"
        app:fontFamily="@font/dancing_script"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/product_description_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/product_name_main"
        android:layout_marginStart="5dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        app:fontFamily="@font/dancing_script"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/product_price_main"
        android:layout_margin="15dp"/>
    
    <TextView
        android:id="@+id/amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true"
        android:text="@string/amount"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="#06FF12"
        app:fontFamily="@font/dancing_script"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:id="@+id/amount_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount_text_view"
        android:gravity="center">

        <ImageButton
            android:id="@+id/minus_amount_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/minus_amount_icon"
            android:contentDescription="@string/minus_amount_icon"
            android:onClick="OnClickAmountPickButton"/>

        <TextView
            android:id="@+id/amount_picked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="32sp"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/add_amount_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/add_amount_icon"
            android:background="@android:color/transparent"
            android:onClick="OnClickAmountPickButton"
            android:contentDescription="@string/add_amount_icon" />
    </LinearLayout>

    <Button
        android:id="@+id/cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:text="@string/add_to_your_cart"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/add_to_your_cart_icon"
        android:onClick="OnClickCartButton"
        android:background="@android:color/transparent"
        android:textSize="26sp"
        app:fontFamily="@font/dancing_script"
        android:textColor="#06FF12"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/add_to_your_cart_icon" />

    <Button
        android:layout_below="@id/cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClickGoToCartButton"/>

</RelativeLayout>