<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main_panel_relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main_image">

    <LinearLayout
        android:id="@+id/side_nav_bar_main_panel_view"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_main_image"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:layout_alignParentLeft="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/contact_us_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/contact_us"
            android:textColor="#06FF12"
            android:textSize="32sp"
            app:fontFamily="@font/dancing_script" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/contact_us_icon"
            android:drawableLeft="@drawable/contact_us_icon"
            android:drawablePadding="5dp"
            app:fontFamily="@font/dancing_script"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:text="@string/call" />

        <TextView
            android:id="@+id/change_language_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="#06FF12"
            android:textSize="32sp"
            app:fontFamily="@font/dancing_script"
            android:paddingTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/language_icon"
            android:drawableLeft="@drawable/language_icon"
            android:drawablePadding="15dp"
            android:text="@string/serbian"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            app:fontFamily="@font/dancing_script"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/language_icon"
            android:drawableLeft="@drawable/language_icon"
            android:drawablePadding="15dp"
            android:text="@string/english"
            android:textSize="22sp"
            android:textAllCaps="false"
            app:fontFamily="@font/dancing_script"/>

        <Button
            android:id="@+id/previous_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:gravity="center"
            android:drawableLeft="@drawable/swipe_back_arrow_icon"
            android:drawableStart="@drawable/swipe_back_arrow_icon"
            android:drawablePadding="15dp"
            android:background="@android:color/transparent"
            style="@style/HugeText.Button"
            app:fontFamily="@font/dancing_script"
            android:paddingTop="35dp"
            android:text="@string/back"
            android:onClick="OnClickDismissSideBar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_main_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/side_nav_bar_main_panel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickHeaderButton"
            android:background="@android:color/transparent"
            android:src="@drawable/side_nav_bar_icon"
            android:contentDescription="@string/side_nav_bar_icon" />

        <TextView
            android:id="@+id/octopus_header_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/octopus"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="#06FF12"
            app:fontFamily="@font/dancing_script" />

        <ImageButton
            android:id="@+id/cart_button_main_panel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickHeaderButton"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_shopping_cart_black_24dp"
            android:contentDescription="@string/shopping_cart_icon" />
    </LinearLayout>

    <EditText
        android:id="@+id/search_firm_by_name_text_view"
        android:layout_below="@id/header_main_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/enter_name"
        android:drawableLeft="@drawable/username_icon"
        android:drawableStart="@drawable/username_icon"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:layout_margin="15dp"
        android:textColor="@android:color/white"
        android:maxLines="1"
        android:textSize="32sp"
        app:fontFamily="@font/dancing_script"/>

    <TextView
        android:id="@+id/no_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_result_match_input_arguments"
        android:textSize="32sp"
        app:fontFamily="@font/dancing_script"
        android:textAlignment="center"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/firm_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_firm_by_name_text_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/search_button_main_panel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickButtonFromFooter"
            android:background="@android:color/transparent"
            android:src="@drawable/search_icon_black"
            android:contentDescription="@string/footer_search_icon"
            android:alpha="0.5"/>

        <ImageButton
            android:id="@+id/view_button_main_panel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="OnClickButtonFromFooter"
            android:background="@android:color/transparent"
            android:textSize="26sp"
            app:fontFamily="@font/dancing_script"
            android:textColor="#06FF12"
            android:drawablePadding="15dp"
            android:src="@drawable/display_result_icon"
            android:contentDescription="@string/item_view_icon" />
    </LinearLayout>

</RelativeLayout>